--- a/applicationSetup/page2.html
+++ b/applicationSetup/page2.html
@@ -14,7 +14,7 @@
   <img src="https://raw.githubusercontent.com/MickaelHubert974/itmo444-fall2015/master/applicationSetup/hawks.png" alt="hawks" style="width:600px;height:400px;">
   
   <p>
-  Click here to access to the <a href="page1.html">first page</a>.
+  Click here to access to the <a href="index.html">first page</a>.
   </p>
  </body>
 </html>
