--- a/MP1/applicationSetup/index.html
+++ b/MP1/applicationSetup/index.html
@@ -17,7 +17,7 @@
   Click here to access to the <a href="page2.html">second page</a>.
   </p>
   <p>
-  Click here to access to the <a href="gallery.php">Gallery</a>.
+  Click here to access to the <a href="index.php">Gallery</a>.
   </p>
   
  </body>
